<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ultimate Organizer</string>

    <!-- main navigation -->
    <string name="title_section_overview">Overview</string>
    <string name="title_section_calendar">Calendar</string>
    <string name="title_section_notes">Notes</string>
    <string name="title_section_academic">Academic</string>
    <string name="title_section_academic_schedule">Schedule</string>
    <string name="title_section_academic_network">Network</string>

    <!-- Activity Names -->
    <string name="title_activity_academic_network">Academic Network</string>
    <string name="title_activity_schedule">Academic Schedule</string>
    <string name="title_activity_task_details">Task Details</string>

    <!-- sub navigation (ActionBar Spinner) -->
    <string-array name="title_section_overview_subs">
        <item>All Tasks</item>
        <item>Upcoming</item>
        <item>Overdue</item>
        <item>Completed</item>
        <item>Tags</item>
    </string-array>
    <string-array name="title_section_calendar_subs">
        <item>Daily</item>
        <item>Weekly</item>
        <item>Monthly</item>
        <item>Yearly</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- ActionBar items -->
    <string name="action_settings">Settings</string>
    <string name="academic_schedule_section_1">Courses</string>
    <string name="academic_schedule_section_2">Section 2</string>
    <string name="academic_schedule_section_3">Section 3</string>
    <string name="academic_network_section_1">Public Feed</string>
    <string name="academic_network_section_2">Section 2</string>
    <string name="academic_network_section_3">Section 3</string>

    <!-- Course item strings -->

    <string name="title_activity_add_course">New Course</string>

    <!-- Task item strings -->

    <string name="tag_name">CS 102</string>
    <string name="tag_name2">lab06</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="date_active">13:40-17:40</string>
    <string name="date_overdue">13:40-17:40</string>
    <string name="date_complete">13:40-17:40</string>
    <string name="title_activity_add_task">New Task</string>
    <string name="title_activity_edit_task">Edit Task</string>
    <string name="title_activity_add_sub_task">Relate Task to %s</string>
    <string name="task">Task</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_add">Add new</string>

    <!-- Add task screen -->
    <string name="action_add_task">Add Task</string>
    <string name="action_edit_task">Edit Task</string>
    <string name="add_task_name_input_hint">Name</string>
    <string name="add_task_description_input_hint">Description</string>
    <string name="add_task_time_text_from">FROM</string>
    <string name="add_task_time_text_to">T0</string>
    <string name="add_task_reminders">REMINDERS</string>
    <string name="add_task_tags">TAGS</string>
    <string name="add_task_course">RELATED COURSE</string>
    <string name="add_task_related_tasks">RELATED TASKS</string>
	<string name="add_task_privacy">PRIVACY</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Academic schedule screen -->
    <string name="user_name">Omert Aksoy</string>
    <string name="user_info">Bilkent University, EE</string>
    <string name="action_add_course">Add Course</string>
    <string name="academic_calendar_year">2013-2014 SPRING</string>
    <string name="schedule_course_name">CS 102</string>
    <string name="schedule_course_description">Algorithms and Programming II</string>
    <string name="schedule_course_instructor">David Davenport</string>

    <!-- Notes to do and notes photo item strings -->

    <string name="note_todo_title">Configure the server</string>
    <string name="note_todo_text1">Choose a provider</string>
    <string name="note_todo_text2">Pay for the server</string>
    <string name="note_todo_text3">Install Postgres</string>
    <string name="note_todo_date1">2 Mar 18:42</string>
    <string name="note_photo_title">Homework Q4 Solution</string>
    <string name="note_photo_tag_name1">MATH 132</string>
    <string name="note_photo_tag_name2">homework</string>
    <string name="note_photo_date">2 Mar\n18:42</string>
    <string name="note_voice_title">Presentation: Suggestions of classmates</string>
    <string name="note_voice_tag_name1">CS 102</string>
    <string name="note_voice_tag_name2">presentation</string>
    <string name="note_voice_duration">5:39</string>
    <string name="note_voice_date">4 Mar\n15:33</string>
    <string name="note_plain_title">Calculus Midterm 2</string>
    <string name="note_plain_description">stop whatever youre doing and study</string>
    <string name="note_plain_tag_name1">MATH 102</string>
    <string name="note_plain_tag_name2">midterm</string>
    <string name="note_plain_date">24 Apr\n17:33</string>

    <!-- strings for add course -->

    <string name="add_course_course_code">ENG</string>
    <string name="add_course_course_number">101</string>
    <string name="add_course_section_number">17</string>
    <string name="add_course_course_name">Composition and Writing I</string>
    <string name="add_course_instructor_name">Dr. Anita L. Akkas</string>
    <string name="add_course_academic_year">2013-2014 SPRING</string>
    <string name="add_course_new_course_edittext">Add New Course</string>

    <!-- strings for add quick note -->

    <string name="item_add_note_hint">Tap To Add Note!</string>

    <!-- strings for add task -->

    <string name="item_add_task_edittext_hint">Enter task here</string>
    <string name="item_add_task_date">Friday, 15 May 2014</string>
    <string name="item_add_task_details_text">DETAILS</string>

    <!-- strings for public feed item -->

    <string name="item_public_feed_course_name">TURK102-13</string>
    <string name="item_public_feed_task_name">Third Homework</string>
    <string name="item_public_feed_task_description">Letter to Papa</string>
    <string name="item_public_feed_task_owner">by Ani Kristo</string>
    <string name="item_public_feed_task_due_date">Tue, 15 May\n10.30 - 12.30</string>

    <!-- reminder type displays -->
    <string-array name="reminder_types_keys">
        <item>Silent</item>
        <item>Vibrate</item>
        <item>Loud</item>
    </string-array>

    <!-- reminder date displays -->
    <string-array name="reminder_before_event_keys">
        <item>right away</item>
        <item>1 minute</item>
        <item>5 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>45 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>12 hours</item>
        <item>24 hours</item>
        <item>2 days</item>
        <item>1 week</item>
    </string-array>

    <string name="msg_unknown_error">Sorry, an unknown error occurred.</string>
    <string name="msg_cannot_add_task">Sorry, could not save task.</string>
    <string name="msg_success_add_task">Task created.</string>
    <string name="msg_cannot_add_course">Sorry, could not save course.</string>
    <string name="msg_success_add_course">Course created.</string>
    <string name="today_capital">Today</string>
    <string name="yesterday_capital">Yesterday</string>
    <string name="tomorrow_capital">Tomorrow</string>
    <string name="title_activity_task_detail">TaskDetailActivity</string>
    <string name="tag_input_hint">enter a tag name…</string>
    <string name="task_not_found_error_message">Could not find specified Task</string>
    <string name="edit_task_no_task">No task specified.</string>
    <string name="edit_task_unknown_error">Something went wrong.</string>
    <string name="edit_task_success">Edited task.</string>
    <string name="edit_course_unknown_error">Something went wrong.</string>
    <string name="course_not_found_error_message">Could not find specified Course</string>
    <string name="edit_course_no_course">No course specified.</string>
    <string name="edit_course_success">Edited course.</string>
    <string name="add_subtask_no_parent_task">No task specified.</string>
    <string name="add_subtask_no_relation_error">Could not create relation.</string>
    <string name="title_menu_task_edit">Edit</string>
    <string name="title_menu_task_delete">Delete</string>
    <string name="task_removed">Task removed.</string>
    <string name="title_activity_login">Ultimate Organizer Cloud</string>
	<string name="title_activity_register">Ultimate Organizer Cloud</string>

	<string name="login_hint_email">example@ug.bilkent.edu.tr</string>
	<string name="login_hint_password">******</string>

    <string name="register_hint_email">E-Mail "jdoe@ug.bilkent.edu.tr"</string>
    <string name="register_hint_password">Password</string>
    <string name="register_hint_first_name">First Name</string>
    <string name="register_hint_last_name">Last Name</string>
    <string name="register_hint_school_name">School Name</string>
    <string name="register_hint_department_code">Department Code "CS"</string>

	<string name="login_button">Sign in</string>
	<string name="register_button">Sign up</string>

	<string name="guest_menu_login">Sign in</string>
	<string name="guest_menu_register">Sign up</string>

	<string name="user_menu_logout">Sign out</string>

	<string name="not_connected">Not connected to Cloud</string>

	<string name="no_network">No network connection</string>
	<string name="invalid_login">Invalid login</string>
	<string name="unknown_error">Unknown error</string>

	<string name="register_success">Enjoy the Cloud features!</string>

	<string name="course_spinner_default">Pick a course</string>
	<string name="add_task_public_label">Share this task with classmates</string>

	<string name="unknown_error_public_feed">An error happened while loading public feed.</string>

	<string name="oops">Oops</string>

</resources>
