<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="?android:attr/actionBarSize"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@android:color/transparent">

    <LinearLayout
        android:id="@+id/fragment_register_inner_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:minWidth="200dp"
        android:orientation="vertical"
        style="@style/auth_box">

        <EditText
            android:id="@+id/input_register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_auth_elements"
            android:hint="@string/register_hint_email"
            android:inputType="textEmailAddress"/>

        <EditText
            android:id="@+id/input_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_auth_elements"
            android:hint="@string/register_hint_password"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/input_register_first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_auth_elements"
            android:hint="@string/register_hint_first_name"/>

        <EditText
            android:id="@+id/input_register_last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_auth_elements"
            android:hint="@string/register_hint_last_name"/>

        <EditText
            android:id="@+id/input_register_school_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_auth_elements"
            android:hint="@string/register_hint_school_name"/>

        <EditText
            android:id="@+id/input_register_department_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_auth_elements"
            android:hint="@string/register_hint_department_code"/>

        <Button
            android:id="@+id/button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_auth_elements"
            android:text="@string/register_button"/>

    </LinearLayout>

</RelativeLayout>
