<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/note_todo_main_layout_padding">

    <TextView
        android:id="@+id/note_todo_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:text="@string/note_todo_title"
        android:textSize="@dimen/note_todo_title_text_size"
        android:textColor="@color/note_todo_unchecked_color"/>

    <CheckBox
        android:id="@+id/todo_checkbox_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/note_todo_title"
        android:layout_marginTop="@dimen/note_todo_item_margin_top"
        android:checked="true"
        android:text="@string/note_todo_text1"
        android:textSize="@dimen/note_todo_checkbox_text_size"
        android:textColor="@color/note_todo_checked_color"/>

    <CheckBox
        android:id="@+id/todo_checkbox_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/todo_checkbox_1"
        android:layout_marginTop="@dimen/note_todo_item_margin_top"
        android:checked="true"
        android:text="@string/note_todo_text2"
        android:textSize="@dimen/note_todo_checkbox_text_size"
        android:textColor="@color/note_todo_checked_color"/>

    <CheckBox
        android:id="@+id/todo_checkbox_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/todo_checkbox_2"
        android:layout_marginTop="@dimen/note_todo_item_margin_top"
        android:checked="false"
        android:text="@string/note_todo_text3"
        android:color="@color/note_todo_unchecked_color"
        android:textSize="@dimen/note_todo_checkbox_text_size"/>

    <TextView
        android:id="@+id/note_todo_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@id/todo_checkbox_2"
        android:text="@string/note_todo_date1"/>

</RelativeLayout>