<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
	android:paddingTop="?android:attr/actionBarSize"
    android:paddingBottom="@dimen/activity_vertical_margin"
	android:background="@drawable/auth_bg_repeat"
    tools:context="co.uberdev.ultimateorganizer.android.auth.LoginActivity$PlaceholderFragment">

    <LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:minWidth="200dp"
			android:orientation="vertical"
			style="@style/auth_box">

		<EditText
				android:id="@+id/input_login_email"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_between_auth_elements"
				android:hint="@string/login_hint_email"
				android:inputType="textEmailAddress"/>

		<EditText
				android:id="@+id/input_login_password"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_between_auth_elements"
				android:hint="@string/login_hint_password"
				android:inputType="textPassword"/>

		<Button
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin_between_auth_elements"
				android:text="@string/login_button"
				/>

	</LinearLayout>

</RelativeLayout>
