<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/schedule_course_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/schedule_course_text_size"
        android:textStyle="bold"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="@dimen/schedule_course_info_margin_top"
        android:layout_marginLeft="@dimen/schedule_course_name_margin_top"
        android:text="@string/schedule_course_name"/>

    <TextView
        android:id="@+id/schedule_course_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/schedule_course_text_size"
        android:layout_alignTop="@id/schedule_course_code"
        android:layout_marginLeft="@dimen/schedule_course_info_margin_left"
        android:layout_toRightOf="@id/schedule_course_code"
        android:text="@string/schedule_course_description"/>

    <TextView
        android:id="@+id/schedule_course_instructor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/schedule_course_text_size"
        android:layout_alignLeft="@id/schedule_course_name"
        android:layout_below="@id/schedule_course_name"
        android:layout_marginTop="@dimen/schedule_course_instructor_margin_top"
        android:layout_marginLeft="@dimen/schedule_course_name_margin_top"
        android:paddingBottom="@dimen/schedule_course_instructor_padding_bottom"
        android:layout_alignParentLeft="true"
        android:textStyle="bold"
        android:text="@string/schedule_course_instructor"
        android:textColor="#666666"/>

</RelativeLayout>