<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/note_todo_main_layout_padding">

    <ImageView
        android:id="@+id/iv_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/homework"
        android:layout_alignParentStart="true"/>

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_photo"
        android:layout_alignLeft="@id/iv_photo"
        android:layout_alignRight="@id/iv_photo"
        android:text="@string/note_photo_title"
        android:textColor="@color/note_photo_title_color"
        android:textSize="@dimen/note_todo_title_text_size"/>

    <LinearLayout
        android:id="@+id/note_photo_tag_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_alignLeft="@id/iv_photo"
        android:layout_marginTop="@dimen/note_photo_tag_bar_margin_top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_tag_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/note_photo_tag_margin_left"
            android:paddingLeft="@dimen/note_photo_tag_text_padding"
            android:paddingTop="@dimen/note_photo_tag_text_padding"
            android:paddingRight="@dimen/note_photo_tag_text_padding"
            android:paddingBottom="@dimen/note_photo_tag_text_padding"
            android:text="@string/note_photo_tag_name1"
            android:textSize="@dimen/note_photo_tag_text_size"
            android:background="@color/note_photo_tag_color1"
            android:textColor="@color/note_photo_tag_text_color"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/note_photo_tag_margin_left"
            android:paddingLeft="@dimen/note_photo_tag_text_padding"
            android:paddingTop="@dimen/note_photo_tag_text_padding"
            android:paddingRight="@dimen/note_photo_tag_text_padding"
            android:paddingBottom="@dimen/note_photo_tag_text_padding"
            android:text="@string/note_photo_tag_name2"
            android:textSize="@dimen/note_photo_tag_text_size"
            android:background="@color/note_photo_tag_color2"
            android:textColor="@color/note_photo_tag_text_color"/>

        </LinearLayout>

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_title"
        android:layout_alignRight="@id/iv_photo"
        android:text="@string/note_photo_date"/>

</RelativeLayout>